# sofar_ros2_pkg

./: README.md
log/: latest_list
navigation2/nav2_bringup/bringup/maps/: map.pgm  map.yaml
navigation2/nav2_bringup/bringup/params/: nav2_params.yaml
navigation2/nav2_bringup/bringup/rviz/: nav2_default_view.rviz
navigation2/nav2_bt_navigator/src/: bt_navigator.cpp
navigation_2/nav2_bt_navigator/src/: bt_navigator.cpp
orthopillar_robot_spawner_pkg/: package.xml  setup.cfg  setup.py
orthopillar_robot_spawner_pkg/launch/: gazebo_world.launch.py
orthopillar_robot_spawner_pkg/models/ortho_meshes/meshes/: orthopillar.dae  orthopillar.stl
orthopillar_robot_spawner_pkg/models/orthopillar/: model.config  model.sdf  model.urdf
orthopillar_robot_spawner_pkg/orthopillar_robot_spawner_pkg/: spawn_demo.py  state_publisher.py
orthopillar_robot_spawner_pkg/rviz/: config.rviz
orthopillar_robot_spawner_pkg/urdf/: model.urdf.xml
orto_nav/: CMakeLists.txt  package.xml
orto_nav/config/: New_nav2.yaml  mapper_params_online_sync.yaml  nav2_params.yaml  orto_nav2.yaml  please.yaml
orto_nav/launch/: bringup_launch.py  localization_launch.py  nav.launch.py  navigation_launch.py  orto_nav2.launch.py  orto_state_publisher.launch.py  rviz_launch.py  slam.launch.py  spawn_orto_launch.py
orto_nav/maps/: map.pgm  map.yaml
orto_nav/models/: model.config  model.sdf
orto_nav/urdf/: sam_bot_description.urdf
orto_nav/worlds/: room.world
sam_bot_description/: CMakeLists.txt  package.xml
sam_bot_description/config/: ekf.yaml
sam_bot_description/launch/: display.launch.py  gui.launch.py  orto_urdf.launch.py
sam_bot_description/maps/: map.pgm  map.yaml
sam_bot_description/models/small_warehouse/: model.config  model.sdf
sam_bot_description/rviz/: urdf_config.rviz
sam_bot_description/scripts/: initPose.py
sam_bot_description/src/description/: round.urdf  roundOld.urdf  sam_bot_description.urdf
sam_bot_description/worlds/: empty.world  prova.world  room.world
slam_toolbox/config/: mapper_params_online_async.yaml  mapper_params_online_sync.yaml
teleop_twist_keyboard/: teleop_twist_keyboard.py
